# Differential_Drive_Robot

./: README.md
proj7/: CMakeLists.txt  package.xml  urdf.rviz
proj7/config/: arm_config.yaml  joint_names_proj7.yaml  joint_states.yaml  my_config.yaml  rosparams.yaml
proj7/launch/: custom_launch1.launch  display.launch  gazebo.launch  gazebo_new.launch  launch_guide.txt
proj7/meshes/: arm_base.STL  base_link.STL  end.STL  link1.STL  link2.STL  wheel1.STL  wheel2.STL  wheel3.STL  wheel4.STL
proj7/urdf/: gazebo_refs_xArm.xacro  proj7.csv  proj7.gv  proj7.urdf.xacro  proj7.xacro  transmission.trans.xacro  transmission.trans.xacro.save  transmission_xArm.xacro
